@@ -30,7 +30,7 @@ public class DeveloperRC extends PersonRC
      */
     public void setId(BigDecimal id)
     {
-        this.id = new Long(id.longValue());
+        this.id = Long.valueOf(id.longValue());
     }
 
     /**
@@ -38,7 +38,7 @@ public class DeveloperRC extends PersonRC
      */
     public void setId(BigInteger id)
     {
-        this.id = new Long(id.longValue());
+        this.id = Long.valueOf(id.longValue());
     }
 
     /**
